[package]
name = "traceroute"
version = "0.1.0"
edition = "2021"

[dependencies]
p4rs = { git = "https://github.com/oxidecomputer/p4" }
p4-macro = { path = "/users/ry/src/p4/lang/p4-macro" }
socket2 = { version = "0.4", features = ["all"] }
bitvec = "1.0"
colored = "2.0"
usdt = { git = "https://github.com/oxidecomputer/usdt" }
clap = { version = "3.2.22", features = ["derive"] }
ispf = { git = "https://github.com/oxidecomputer/ispf" }
serde = { version = "1.0.145", features = ["derive"] }
